--- a/test.conf
+++ b/test.conf
@@ -1,11 +1,11 @@
 server {
 	listen 0.0.0.0:8685;
 	location /python/profile.intra.42.fr/profile.intra.42.frprofile.intra.42.frprofile.intra.42.frprofile.intra.42.frprofile.intra.42.frprofile.intra.42.frprofile.intra.42.frprofile.intra.42.frprofile.intra.42.frprofile.intra.42.frprofile.intra.42.frprofile.intra.42.frprofile.intra.42.frprofile.intra.42.frprofile.intra.42.frprofile.intra.42.frprofile.intra.42.frprofile.intra.42.frprofile.intra.42.frprofile.intra.42.frprofile.intra.42.frprofile.intra.42.frprofile.intra.42.frprofile.intra.42.frprofile.intra.42.frprofile.intra.42.frprofile.intra.42.frprofile.intra.42.frprofile.intra.42.frprofile.intra.42.frprofile.intra.42.frprofile.intra.42.frprofile.intra.42.frprofile.intra.42.frprofile.intra.42.frprofile.intra.42.frprofile.intra.42.frprofile.intra.42.fr/profile.intra.42.frprofile.intra.42.frprofile.intra.42.frprofile.intra.42.frprofile.intra.42.frprofile.intra.42.frprofile.intra.42.frprofile.intra.42.frprofile.intra.42.frprofile.intra.42.frprofile.intra.42.frprofile.intra.42.frprofile.intra.42.frprofile.intra.42.frprofile.intra.42.frprofile.intra.42.frprofile.intra.42.frprofile.intra.42.frprofile.intra.42.frprofile.intra.42.frprofile.intra.42.frprofile.intra.42.frprofile.intra.42.frprofile.intra.42.frprofile.intra.42.frprofile.intra.42.fr {
-		root .www/root/python;
+		root 			.www/root/python;
 		autoindex off;
 		index index.py;
 		deny all;
-		redirect http://profile.intra.42.fr; 
+		redirect http://profile.intra.42.fr;
 		allowed_methods GET,POST;
 		cgiExt py;
 		cgiPath /usr/local/bin/python3.9;
@@ -16,7 +16,7 @@ server {
 	error_page 404 .www/root/custom_404.html;
 	root .www/root99999;
 	allowed_methods GET,POST;
-	location /python {{
+	location /python {
 
 
 
