still parlex the file

--- a/test.conf
+++ b/test.conf
@@ -1,12 +1,12 @@
 server {
 	listen 0.0.0.0:8685;
 	location /python/profile.intra.42.fr/profile.intra.42.frprofile.intra.42.frprofile.intra.42.frprofile.intra.42.frprofile.intra.42.frprofile.intra.42.frprofile.intra.42.frprofile.intra.42.frprofile.intra.42.frprofile.intra.42.frprofile.intra.42.frprofile.intra.42.frprofile.intra.42.frprofile.intra.42.frprofile.intra.42.frprofile.intra.42.frprofile.intra.42.frprofile.intra.42.frprofile.intra.42.frprofile.intra.42.frprofile.intra.42.frprofile.intra.42.frprofile.intra.42.frprofile.intra.42.frprofile.intra.42.frprofile.intra.42.frprofile.intra.42.frprofile.intra.42.frprofile.intra.42.frprofile.intra.42.frprofile.intra.42.frprofile.intra.42.frprofile.intra.42.frprofile.intra.42.frprofile.intra.42.frprofile.intra.42.frprofile.intra.42.frprofile.intra.42.fr/profile.intra.42.frprofile.intra.42.frprofile.intra.42.frprofile.intra.42.frprofile.intra.42.frprofile.intra.42.frprofile.intra.42.frprofile.intra.42.frprofile.intra.42.frprofile.intra.42.frprofile.intra.42.frprofile.intra.42.frprofile.intra.42.frprofile.intra.42.frprofile.intra.42.frprofile.intra.42.frprofile.intra.42.frprofile.intra.42.frprofile.intra.42.frprofile.intra.42.frprofile.intra.42.frprofile.intra.42.frprofile.intra.42.frprofile.intra.42.frprofile.intra.42.frprofile.intra.42.fr {
-		root 			.www/root/python;
+		root .www/root/python;
 		autoindex off;
 		index index.py;
 		deny all;
 		redirect http://profile.intra.42.fr;
-		allowed_methods GET,POST;
+		allowed_methods GET,POST,DELETE;
 		cgiExt py;
 		cgiPath /usr/local/bin/python3.9;
 	}
@@ -49,7 +49,7 @@ server {
 	error_page 504 .www/root/custom_504.html;
 	root .www/rootxxxx;
 	allowed_methods GET,POST;
-	listen 1.0.0.0:1111; 
+	listen 1.0.0..0.0:rthtfy1111; 
 }
 server {
 
@@ -103,5 +103,11 @@ server {
 	}
 	location /p7ython {
 		root .www/root/python;
+	}
+}
+
+server {
+	location pyth{
+		root ppppppp;
 	}
 }
