--- a/test.conf
+++ b/test.conf
@@ -15,7 +15,7 @@ server {
 	upload .www/root/uploads;
 	error_page 404 .www/root/custom_404.html;
 	root .www/root99999;
-	allowed_methods GET,POST;
+	allowed_methods GET POST;
 	location /python {
 
 
@@ -49,14 +49,14 @@ server {
 	error_page 504 .www/root/custom_504.html;
 	root .www/rootxxxx;
 	allowed_methods GET,POST;
-	listen 1.0.0..0.0:rthtfy1111; 
+	listen 10.055.40.50:1111;
 }
 server {
 
 
 
 
-	listen 0.0.0.0:8685; 
+	listen 0.0.0.0:862285;
 	location /pyt44hon {
 		root .www/root/python;
 	}
