--- a/test.conf
+++ b/test.conf
@@ -16,7 +16,7 @@ server {
 	error_page 404 .www/root/custom_404.html;
 	root .www/root99999;
 	allowed_methods GET POST;
-	location /python {
+	location /python/hnaaa/rooot {
 
 
 
@@ -42,8 +42,6 @@ server {
 	}
 	index index.py;
 	deny all;
-
-
 
 	}
 	error_page 504 .www/root/custom_504.html;
