--- a/test.conf
+++ b/test.conf
@@ -10,6 +10,7 @@ server {
 		cgiExt py;
 		cgiPath /usr/local/bin/python3.9;
 	}
+	server_name website.com www.website.com google.com yahoo.fr;
 	index interneeeeet.html;
 	autoindex on;
 	upload .www/root/uploads;
@@ -51,6 +52,7 @@ server {
 
 
 	listen 0.0.0.0:862285;
+	server_name google.com;
 	location /pyt44hon {
 		root .www/root/python;
 	}
@@ -101,6 +103,7 @@ server {
 }
 
 server {
+	server_name website.coms www.website.coms google.coms yahoo.frs;
 	location pyth{
 		root ppppppp;
 	}
