update the lunch function

--- a/UTILS/default.config
+++ b/UTILS/default.config
@@ -1,5 +1,28 @@
 server {
 
 	listen 0.0.0.0:8080;
-	root	./www;
+	root ./www/frr/;
+}
+
+server {
+
+	listen 0.0.0.0:7070;
+	root ./www/frr/;
+}
+
+server {
+
+	listen 0.0.0.0:6060;
+	root ./www/frr/;
+}
+server {
+
+	listen 0.0.0.0:9090;
+	root ./www/frr/;
+}
+
+server {
+
+	listen 0.0.0.0:3030;
+	root ./www/frr/;
 }
