--- a/UTILS/default.config
+++ b/UTILS/default.config
@@ -3,7 +3,18 @@ server {
 	listen 0.0.0.0:8080;
 	root ./www/frr/;
 	index up.html;
-	autoindex on;
+	autoindex off;
+
+	location /www/ {
+
+		index indes.html;
+		autoindex on;
+	}
+
+	location /www:root/ {
+
+		index index.html;
+	}
 }
 
 server {
