update parser obj

--- a/UTILS/default.config
+++ b/UTILS/default.config
@@ -1,28 +1,37 @@
 server {
 
 	listen 0.0.0.0:8080;
-	root ./www/frr/;
+	root www/;
+	index indes.html;
+	autoindex on;
+
+	location / {
+		root www/;
+		index index.html;
+		error_page 404 ErrorFiles/404.html;
+	
+	}
+
+	location upload/ {
+		index upload_.html;
+		autoindex on;
+		allowed_methods POST;
+	}
+
+	location PHP/ {
+
+		index fileCGI.php;
+	}
+
+	location www:root/ {
+		error_page 404 ErrorFiles/404.html;
+		index index.html;
+	}
 }
 
 server {
 
-	listen 0.0.0.0:7070;
-	root ./www/frr/;
-}
-
-server {
-
-	listen 0.0.0.0:6060;
-	root ./www/frr/;
-}
-server {
-
-	listen 0.0.0.0:9090;
-	root ./www/frr/;
-}
-
-server {
-
-	listen 0.0.0.0:3030;
-	root ./www/frr/;
+	listen 0.0.0.0:8081;
+	root www/;
+	autoindex on;
 }
