--- a/Config/default.config
+++ b/Config/default.config
@@ -16,6 +16,11 @@ server {
 		index fileCGI.php;
 	}
 
+	location RED/ {
+
+		return 302 https://www.rfc-editor.org/rfc/rfc2616.html;
+	}
+
 	location www:root/ {
 
 		index index.html;
