--- a/Config/default.config
+++ b/Config/default.config
@@ -7,7 +7,7 @@ server {
 
 	location upload/ {
 
-		index upload_.html;
+		index up.html;
 		autoindex on;
 	}
 
@@ -18,18 +18,14 @@ server {
 
 	location RED/ {
 
-		return 302 https://www.rfc-editor.org/rfc/rfc2616.html;
+		return 302 https://www.rfc-editor.org/;
 	}
 
-	location www:root/ {
+	location CGI/ {
 
 		index index.html;
 	}
 
-	location start/ {
-
-		index index.html;
-	}
 }
 
 server {
