--- a/Config/default.config
+++ b/Config/default.config
@@ -5,6 +5,7 @@ server {
 	index index.html;
 	autoindex on;
 
+	allowed_methods GET POST DELETE;
 	location upload/ {
 
 		index up.html;
@@ -12,7 +13,6 @@ server {
 	}
 
 	location PHP/ {
-
 		index fileCGI.php;
 	}
 
@@ -22,7 +22,6 @@ server {
 	}
 
 	location CGI/ {
-
 		index index.html;
 	}
 
